--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 
                 <div className="container mx-auto px-6 relative z-10 text-center">
                   <div className={`inline-block px-4 py-1 rounded-full border text-sm font-medium mb-6 animate-fade-in-up ${isDarkMode ? 'bg-white/10 border-white/20 text-purple-300' : 'bg-white border-purple-200 text-purple-600 shadow-sm'}`}>
-                    바이브코딩을 활용한 서비스 크리에이션 아카데미
+                    🚀 바이브코딩을 활용한 서비스 크리에이션 아카데미
                   </div>
                   <h1 className={`text-4xl md:text-6xl lg:text-7xl font-bold leading-tight mb-8 bg-clip-text text-transparent bg-gradient-to-r ${isDarkMode ? 'from-white via-purple-100 to-purple-300' : 'from-slate-900 via-purple-800 to-purple-600'}`}>
                     5주 후, 나만의<br />
